test/fail/issue-5336.mo
import Actor "issue-5336/actor";

persistent actor class Main() {};
